@@ -1,7 +1,10 @@
-$Id: History,v 1.3 2000-01-11 15:50:14 johna Exp $
+$Id: History,v 1.4 2000-04-12 12:53:03 johna Exp $
 
 History file for visualization/test subdirectory
 ------------------------------------------------
+
+12th April 2000  John Allison  vis-V01-01-01
+- Added more boolean shapes and window to test.
 
 11th January 2000  John Allison
 - Added Sphere and test of displaced solids.
